# MedRAG

./: .env  LICENSE  README.md  app.py  enhanced_medical_kg.html  generate_cache.py  medical_kg.html  pyproject.toml
cache/: query_0.json  query_1.json  query_2.json  query_3.json
data/: cdc_diabetes.txt  rivm_diabetes.txt  source_1_cdc.txt  source_2_rivm.txt  source_3_noise_cardiovascular.txt  source_4_noise_obesity_report.txt
eval/: rag_eval.py
